fixed logo alignment

--- a/css/base.css
+++ b/css/base.css
@@ -121,7 +121,7 @@ button:focus {
 }
 
 .sections__header {
-	padding: 2rem 3rem 0 2rem;
+	padding: 2rem 3rem 0 4rem;
 	display: flex;
 }
 
